layout bugfix

--- a/frontend/style.scss
+++ b/frontend/style.scss
@@ -166,9 +166,13 @@
 }
 
 // General
+.reflex-single-container {
+    display: flex;
+    align-items: stretch;
+}
+
 .reflex-single-container > * {
-    width: 100%;
-    height: 100%;
+    flex-grow: 1;
 }
 
 html {
